[server] prepare namespace support for enumeration items (#1460)
* refactor EnumerationItem cruds

* remove migration code

* remove async operation to reduce complexity

* reduce indirections

* remove MaintenanceResource